--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "firebase": "^9.0.1",
     "gsap": "^3.7.1",
     "lottie-web": "^5.7.13",
     "react": "^17.0.2",
