--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jesus0091.github.io",
+  "homepage": "https://jesus0091.github.io/my-app",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
